Add rhv branding
This patch added the branding of rhv.

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/installer/installer.wxs
+++ b/installer/installer.wxs
@@ -24,6 +24,10 @@
                   DowngradeErrorMessage="A newer version of [ProductName] is already installed."
                   Schedule="afterInstallExecute" />
             <UIRef Id="WixUI_FeatureTree" />
+            <WixVariable Id="WixUIBannerBmp" Value="graphics/horizontal_banner.bmp" />
+            <WixVariable Id="WixUIDialogBmp" Value="graphics/background.bmp" />
+            <Icon Id="icon.ico" SourceFile="graphics/icon.ico"/>
+            <Property Id="ARPPRODUCTICON" Value="icon.ico" />
             <MediaTemplate EmbedCab="yes" />
             <PropertyRef Id="DirectoryProperty" />
             <PropertyRef Id="FeatureProperty" />
