--- a/installer/installer.wxs
+++ b/installer/installer.wxs
@@ -2,7 +2,7 @@
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'
      xmlns:difx='http://schemas.microsoft.com/wix/DifxAppExtension'>
 
-<?include constants.wxi ?>
+     <?include constants.wxi ?>
 
       <Product Id="*"
             Name="RHV-WGT"
@@ -20,9 +20,10 @@
             <PropertyRef Id="LoggingPropertyRef" />
             <PropertyRef Id="Set_ProductName" />
             <PropertyRef Id="Set_RHV_Agent_Properties" />
+            <PropertyRef Id="Set_Old_WGT_props" />
             <MajorUpgrade 
                   DowngradeErrorMessage="A newer version of [ProductName] is already installed."
-                  Schedule="afterInstallExecute" />
+                  Schedule="afterInstallInitialize" />
             <UIRef Id="WixUI_FeatureTree" />
             <WixVariable Id="WixUIBannerBmp" Value="graphics/horizontal_banner.bmp" />
             <WixVariable Id="WixUIDialogBmp" Value="graphics/background.bmp" />
@@ -31,6 +32,6 @@
             <MediaTemplate EmbedCab="yes" />
             <PropertyRef Id="DirectoryProperty" />
             <PropertyRef Id="FeatureProperty" />
-            <PropertyRef Id="InstallExecuteSequenceProperty" />
+            <PropertyRef Id="InstallSequenceProperty" />
       </Product>
 </Wix>
