--- a/installer/properties.wxs
+++ b/installer/properties.wxs
@@ -2,8 +2,10 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 <?if $(sys.BUILDARCH) = "x64" ?>
     <?define Win64 = "yes" ?>
+    <?define WinUninstallRegLocation = Wow6432Node ?>
 <?else ?>
     <?define Win64 = "no" ?>
+    <?define WinUninstallRegLocation = '' ?>
 <?endif ?>
     <!-- Set Cited Properties -->
     <Fragment>
@@ -13,13 +15,13 @@
     <!-- This Fragement is used in the Lunch Condition to determine the arch -->
     <Fragment>
         <Property Id="x86_Validation" Value="1" />
-        <Condition Message= "Detected x86 Windows version, please use a x86 installer">
+        <Condition Message= "Detected x64 Windows version, please use a x64 installer">
                 <![CDATA[VersionNT <> VersionNT64 AND "$(sys.BUILDARCH)" = "x86"]]>
         </Condition>
     </Fragment>
     <Fragment>
         <Property Id="x64_Validation" Value="1" />
-        <Condition Message= "Detected x64 Windows version, please use a x64 installer">
+        <Condition Message= "Detected x86 Windows version, please use a x86 installer">
                 <![CDATA[VersionNT = VersionNT64 AND "$(sys.BUILDARCH)" = "x64"]]>
         </Condition>
     </Fragment>
@@ -81,6 +83,24 @@
                 <FileSearch Name="rhev-agent.ini" Id="rhev_agent_ini_search" />
             </DirectorySearch>
         </Property>
+    </Fragment>
+    <Fragment>
+        <Property Id="Set_Old_WGT_props" Value="1" />
+        <Property Id="REGISTRYSEARCH_OLD_WGT_UNINSTALL_PATH">
+            <RegistrySearch Id="wgt_uninstall_path"
+                Root="HKLM"
+                Key="SOFTWARE\$(var.WinUninstallRegLocation)\Microsoft\Windows\CurrentVersion\Uninstall\{042CD13C-735D-4140-B146-D3F8263D7E4C}"
+                Type="raw"
+                Name="UninstallString"
+                Win64='$(var.Win64)'/>
+        </Property>
+        <CustomAction 
+            Id="CA_InvokeUninstallWGT"
+            Directory="TARGETDIR"
+            ExeCommand='cmd.exe /c [REGISTRYSEARCH_OLD_WGT_UNINSTALL_PATH]'/>
+        <CustomAction
+            Id="CA_OldInstallerError" 
+            Error="An old version of WGT has been detected please uninstall it and try again"/>
     </Fragment>
 <?undef Win64?>
 </Wix>
