Refactor from oVirt\RHV to virtio-win
This patch replaces occurences of ocirt\rhv to virtio-win
and removes old unused code.

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/installer/directories.wxs
+++ b/installer/directories.wxs
@@ -5,7 +5,7 @@
         <Property Id="DirectoryProperty" Value="1" />
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="$(var.PlatformProgramFilesFolder)">
-                <Directory Id="INSTALLERDIR" Name="RHV">
+                <Directory Id="INSTALLERDIR" Name="Virtio-Win">
                     <Directory Id="BALLOON" Name="Balloon"/>
                     <Directory Id="NETWORK" Name="Network"/>
                     <Directory Id="QEMUFWCFG" Name="Qemufwcfg"/>
