--- a/installer/installer.wxs
+++ b/installer/installer.wxs
@@ -23,10 +23,10 @@
                   DowngradeErrorMessage="A newer version of [ProductName] is already installed."
                   Schedule="afterInstallInitialize" />
             <UIRef Id="WixUI_FeatureTree" />
-            <WixVariable Id="WixUIBannerBmp" Value="graphics/horizontal_banner_$(var.Upstream).bmp" />
-            <WixVariable Id="WixUIDialogBmp" Value="graphics/background_$(var.Upstream).bmp" />
+            <WixVariable Id="WixUIBannerBmp" Value="graphics/horizontal_banner.bmp" />
+            <WixVariable Id="WixUIDialogBmp" Value="graphics/background.bmp" />
             <WixVariable Id="WixUILicenseRtf" Value="License.rtf" />
-            <Icon Id="icon.ico" SourceFile="graphics/icon_$(var.Upstream).ico"/>
+            <Icon Id="icon.ico" SourceFile="graphics/icon.ico"/>
             <Property Id="ARPPRODUCTICON" Value="icon.ico" />
             <MediaTemplate EmbedCab="yes" />
             <PropertyRef Id="DirectoryProperty" />
