Disable repair and modify flows
The repaor and modify flows are not stable and tested
yet, to prevent unnececery bugs I have disabled them
for now, opened an issue to track this

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/installer/installer.wxs
+++ b/installer/installer.wxs
@@ -16,6 +16,7 @@
                   InstallScope="perMachine"
                   Description="Virtio-win installer for drivers and agents"/>
             <PropertyRef Id="$(var.LaunchCondition)" />
+            <PropertyRef Id="Disable_repair_and_modify" />
             <PropertyRef Id="LaunchConditionsSupportedOS" />
             <PropertyRef Id="Set_ProductName" />
             <PropertyRef Id="Set_oVirt_Agent_Properties" />
