Ignore service installation failers
We found that failing the installtion because the
service install failed is not what we want to get.
because services has such as vdservice has deps
that are not always available

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/installer/Agents/ovirt_agent/ovirt_agent.wxs
+++ b/installer/Agents/ovirt_agent/ovirt_agent.wxs
@@ -52,7 +52,7 @@
                     DisplayName="oVirt Agent"
                     Description="Manages events detection and alerts"
                     Start="auto"
-                    ErrorControl="normal"
+                    ErrorControl="ignore"
                     Type="ownProcess">
                     <ServiceDependency Id="VirtioSerial" />
                     <ServiceDependency Id="[TermService]" />
