Installer should not fail on service install
For the time being installer should not fail on
service install errors, sometimes we have services
that fail on dependency issues but the drivers gets
installed, this should not cause the installtion to
fail

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/installer/Agents/ovirt_agent/ovirt_agent.wxs
+++ b/installer/Agents/ovirt_agent/ovirt_agent.wxs
@@ -53,7 +53,8 @@
                     Description="Manages events detection and alerts"
                     Start="auto"
                     ErrorControl="ignore"
-                    Type="ownProcess">
+                    Type="ownProcess"
+                    Vital="no">
                     <ServiceDependency Id="VirtioSerial" />
                     <ServiceDependency Id="[TermService]" />
                     <ServiceDependency Id="[spiceusbredirector]" />
