add viofs to the project
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/directories.wxs
+++ b/virtio-win-drivers-installer/directories.wxs
@@ -16,6 +16,7 @@
                     <Directory Id="VIOSCSI" Name="Vioscsi"/>
                     <Directory Id="VIOSERIAL" Name="Vioserial"/>
                     <Directory Id="VIOSTOR" Name="Viostor"/>
+                    <Directory Id="VIOFS" Name="VioFS"/>
                 </Directory>
             </Directory>
         </Directory>
