add viogpudo to the project
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/directories.wxs
+++ b/virtio-win-drivers-installer/directories.wxs
@@ -17,6 +17,7 @@
                     <Directory Id="VIOSERIAL" Name="Vioserial"/>
                     <Directory Id="VIOSTOR" Name="Viostor"/>
                     <Directory Id="VIOFS" Name="VioFS"/>
+                    <Directory Id="VIOGPUDO" Name="Viogpudo"/>
                 </Directory>
             </Directory>
         </Directory>
