replace qemufwcfg null driver with fwcfg functional driver
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/directories.wxs
+++ b/virtio-win-drivers-installer/directories.wxs
@@ -9,7 +9,7 @@
                     <Directory Id="BALLOON" Name="Balloon"/>
                     <Directory Id="NETWORK" Name="Network"/>
                     <Directory Id="PVPANIC" Name="Pvpanic"/>
-                    <Directory Id="QEMUFWCFG" Name="Qemufwcfg"/>
+                    <Directory Id="FWCFG" Name="Fwcfg"/>
                     <Directory Id="QEMUPCISERIAL" Name="Qemupciserial"/>
                     <Directory Id="VIOINPUT" Name="Vioinput"/>
                     <Directory Id="VIORNG" Name="Viorng"/>
