--- a/virtio-win-drivers-installer/Drivers/fwcfg/fwcfg.wxs
+++ b/virtio-win-drivers-installer/Drivers/fwcfg/fwcfg.wxs
@@ -2,7 +2,7 @@
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'
      xmlns:difx='http://schemas.microsoft.com/wix/DifxAppExtension'>
 <?include ../../constants.wxi ?>
-<?include ./qemufwcfg.wxi ?>
+<?include ./fwcfg.wxi ?>
 
     <Fragment>
         <ComponentGroup Id="CMPG_$(var.driverName)_driver" Directory="$(var.destDirName)">
@@ -10,9 +10,13 @@
             <ComponentGroupRef Id='CMPG_WinServer2016_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_WinServer2019_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_WinServer2022_$(var.driverName)' />
+            <ComponentGroupRef Id='CMPG_Win8x64_$(var.driverName)' />
+            <ComponentGroupRef Id='CMPG_Win81x64_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_Win10x64_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_Win11x64_$(var.driverName)' />
         <?else ?>
+            <ComponentGroupRef Id='CMPG_Win8x86_$(var.driverName)' />
+            <ComponentGroupRef Id='CMPG_Win81x86_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_Win10x86_$(var.driverName)' />
         <?endif ?>
         </ComponentGroup>
