--- a/virtio-win-drivers-installer/installSequence.wxs
+++ b/virtio-win-drivers-installer/installSequence.wxs
@@ -15,8 +15,10 @@
             <AllocateRegistrySpace>NOT Installed</AllocateRegistrySpace>
 	    <Custom Action='CA_RestoreIPConfig' Before='InstallFinalize'>NOT Installed</Custom>
 	    <Custom Action='CA_RestoreIPConfigProperty' Before='CA_RestoreIPConfig'></Custom>
-	    <Custom Action='CA_SaveIPConfig' After='InstallInitialize'>Installed AND REMOVE="ALL"</Custom>
-	    <Custom Action='CA_SaveIPConfigProperty' Before='CA_SaveIPConfig'></Custom>
+            <Custom Action='CA_RestoreVIOConfig' Before='InstallFinalize'>NOT Installed</Custom>
+            <Custom Action='CA_RestoreVIOConfigProperty' Before='CA_RestoreVIOConfig'></Custom>
+	    <Custom Action='CA_SaveVIOConfig' After='InstallInitialize'>Installed AND REMOVE="ALL"</Custom>
+	    <Custom Action='CA_SaveVIOConfigProperty' Before='CA_SaveVIOConfig'></Custom>
         </InstallExecuteSequence>
     </Fragment>
 </Wix>
