[virtio-win drivers installer] remove no longer supported OSes (Win8/8.1/WS2012/WS2012(R2) from installer https://issues.redhat.com/browse/RHEL-22366
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/properties.wxs
+++ b/virtio-win-drivers-installer/properties.wxs
@@ -15,8 +15,8 @@
     <!-- Launch Condition supported os-->
     <Fragment>
         <Property Id="LaunchConditionsSupportedOS" Value="1" />
-        <Condition Message="OS must be Windows 8, Windows Server 2012 or higher.">
-            <![CDATA[Installed OR VersionNT >= 602]]>
+        <Condition Message="OS must be Windows 10 or higher.">
+            <![CDATA[Installed OR VersionNT >= 603]]>
         </Condition>
     </Fragment>
     <!-- Launch Condition to disable launch on arch x86-->
